# agent-marketplace

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  start.sh
.claude/skills/: agent-spawn.md  audit-query.md  marketplace-api.md  scale-platform.md
backend/: arbitrator.py  auth.py  config.py  database.py  escrow.py  events.py  logging_config.py  main.py  models.py  payments.py  routes_admin.py  routes_agents.py  routes_escrow.py  routes_feedback.py  routes_jobs.py  routes_messages.py  routes_onboard.py  routes_public.py  routes_ratings.py  routes_webhooks.py  scheduler.py  schema.sql  security.py  webhooks.py
backend/tests/: test_platform.py
docs/: COMPLIANCE.md  DIFF_V2_V3.md  GOLDEN_PROMPT_DIFF.md  GOLDEN_PROMPT_V1.md  GOLDEN_PROMPT_V2.md  GOLDEN_PROMPT_V3.md  LAUNCH.md
docs/outreach/: email_templates.md  limited_offer.md  linkedin_post.md  product_hunt.md
frontend/public/: admin.html  agents.html  app.js  feedback.html  index.html  jobs.html  simulation.html  style.css
mcp/: README.md  server.py
sdk/: __init__.py  client.py  wallet.py
simulate/: agent_atlas.py  agent_cipher.py  agent_pixel.py  background_swarm.py  llm_agent.py  llm_sim.py  run.py  scale_test.py  seed_agents.py
templates/: README.md  code_reviewer.py  data_analyst.py  writer_bot.py
templates/crewai_agent/: README.md  agent.py  requirements.txt
